--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                 I am working mainly on machine learning in/for media forensics. 
               </p>
               <p style="text-align:center">
+                <a href="https://drive.google.com/file/d/1m2uh6MNIR4N2PP9QkVvKMjx08MfWe-Bm/view?usp=sharing">CV</a> &nbsp/&nbsp
                 <a href="shiohara@cvm.t.u-tokyo.ac.jp">Email</a> &nbsp/&nbsp
                 <a href="https://scholar.google.co.jp/citations?user=NME5NOoAAAAJ&hl=ja&authuser=2&oi=ao">Google Scholar</a> &nbsp/&nbsp
                 <a href="https://twitter.com/kaedeshioharacs">Twitter</a> &nbsp/&nbsp
@@ -40,23 +41,26 @@
           <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
             <tr>
                 <td style="padding:20px;width:100%;vertical-align:middle">
-                    <heading>Education</heading>
+                    <heading><font size="6">Education</font></heading>
                     <p>
-                      <strong> <font size="3"> The University of Tokyo</font></strong><br>
-                      Ph.D. in Information and Communication Engineering<br> 
-                      2022.4 - Present
+                      <strong> <font size="4"> The University of Tokyo</font></strong><br>
+                      Ph.D. in Graduate School of Information Science and Technology<br>
+                      Department of Information and Communication Engineering<br> 
+                      <em>2022.4 - Present</em>
                     </p>
 
                     <p>
-                      <strong> <font size="3"> The University of Tokyo</font></strong><br>
-                      Master in Information and Communication Engineering<br> 
-                      2020.4 - 2022.3
+                      <strong> <font size="4"> The University of Tokyo</font></strong><br>
+                      M.S. in Graduate School of Information Science and Technology<br>
+                      Department of Information and Communication Engineering<br> 
+                      <em>2020.4 - 2022.3</em>
                     </p>
                     
                     <p>
-                      <strong> <font size="3"> Osaka City University</font></strong><br>
-                      Bachelor in Electrical and Information Engineering<br> 
-                      2015.4 - 2019.3
+                      <strong> <font size="4"> Osaka City University</font></strong><br>
+                      B.S. in Under Graduate School of Engineering<br>
+                      Department of Electrical and Information Engineering<br> 
+                      <em>2015.4 - 2019.3</em>
                     </p>
                 </td>
             </tr>
@@ -65,9 +69,9 @@
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
           <tr>
               <td style="padding:20px;width:100%;vertical-align:middle">
-                  <heading>Publications</heading>
+                  <heading><font size="6">Publications</font></heading>
                   <p>
-                    <papertitle> <font size="3">Detecting Deepfakes with Self-Blended Images</font></papertitle> <br>
+                    <papertitle> <font size="4">Detecting Deepfakes with Self-Blended Images</font></papertitle> <br>
                     <u>Kaede Shiohara</u>,
                     <a href="https://www.hal.t.u-tokyo.ac.jp/~yamasaki/index-e.html">Toshihiko Yamasaki</a><br>
                     <em>CVPR, Oral, 2022. </em> <br>
