--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
               </p>
               <p style="text-align:center">
                 <a href="https://drive.google.com/file/d/1m2uh6MNIR4N2PP9QkVvKMjx08MfWe-Bm/view?usp=sharing">CV</a> &nbsp/&nbsp
-                <a href="shiohara@cvm.t.u-tokyo.ac.jp">Email</a> &nbsp/&nbsp
+                <a href="mailto:shiohara@cvm.t.u-tokyo.ac.jp">Email</a> &nbsp/&nbsp
                 <a href="https://scholar.google.co.jp/citations?user=NME5NOoAAAAJ&hl=ja&authuser=2&oi=ao">Google Scholar</a> &nbsp/&nbsp
                 <a href="https://twitter.com/kaedeshioharacs">Twitter</a> &nbsp/&nbsp
                 <a href="https://github.com/mapooon">Github</a> 
