--- a/index.html
+++ b/index.html
@@ -68,18 +68,63 @@
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
           <tr>
               <td style="padding:20px;width:100%;vertical-align:middle">
-                  <heading> <font size="6"> Publications </font></heading>
+                  <heading> <font size="6"> Publication </font></heading>
                   <p>
                     <papertitle> <font size="4"> Detecting Deepfakes with Self-Blended Images </font></papertitle> <br>
                     <u>Kaede Shiohara</u>,
                     <a href="https://www.hal.t.u-tokyo.ac.jp/~yamasaki/index-e.html">Toshihiko Yamasaki</a><br>
                     <em>CVPR, Oral, 2022. </em> <br>
-                    <a href="https://arxiv.org/abs/2204.08376">Paper</a> / 
-                    <a href="https://github.com/mapooon/SelfBlendedImages">Code</a> 
+                    [<a href="https://arxiv.org/abs/2204.08376">Paper</a>]  
+                    [<a href="https://github.com/mapooon/SelfBlendedImages">Code</a>] 
+                  </p>
+                  <p>
+                    <papertitle> <font size="4"> Differentiable Programming based
+                      Step Size Optimization for LMS and NLMS Algorithms, </font></papertitle> <br>
+                    Kazunori Hayashi, <u>Kaede Shiohara</u>, Tetsuya Sasaki<br>
+                    <em>APSIPA ASC, 2019. </em> <br>
                   </p>
               </td>
           </tr>
+          
       </tbody></table>
+
+      <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+        <tr>
+            <td style="padding:20px;width:100%;vertical-align:middle">
+                <heading> <font size="6"> Invited Talk </font></heading>
+                <p>
+                  <papertitle>  <font size="4">In MIRU 2022</font></papertitle> <br>
+                  Detecting Deepfakes with Self-Blended Images
+                </p>
+                <p>
+                  <papertitle> <font size="4"> In VC 2022 </font></papertitle> <br>
+                  Detecting Deepfakes with Self-Blended Images
+                </p>
+            </td>
+        </tr>
+    </tbody></table>
+
+    <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+      <tr>
+          <td style="padding:20px;width:100%;vertical-align:middle">
+              <heading> <font size="6"> Media </font></heading>
+              <p>
+                <papertitle> <font size="4"> 偽動画、東京大学は検出精度9割　米メタも封じ込め急ぐ </font></papertitle> <br>
+                2022.6.6 日経新聞電子版, 2022.6.7 紙面版16面 <br>
+                [<a href="https://www.nikkei.com/article/DGXZQOUC232VF0T20C22A5000000/">Webpage</a>]
+              </p>
+              <p>
+                <papertitle> <font size="4"> フェイク動画を見つけ出す高性能AI </font></papertitle> <br>
+                子供の科学2022年7月号
+              </p>
+              <p>
+                <papertitle> <font size="4"> ディープフェイク見破れ　東大開発で脚光　「合成の跡」の見つけ方 </font></papertitle> <br>
+                2022.7.6, 毎日新聞電子版, 2022.7.7 紙面版 <br>
+                [<a href="https://mainichi.jp/articles/20220704/k00/00m/040/113000c">Webpage</a>]
+              </p>
+          </td>
+      </tr>
+  </tbody></table>
 
         
 
