--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
                   </p>
                   <p>
                     <papertitle> <font size="4"> Differentiable Programming based
-                      Step Size Optimization for LMS and NLMS Algorithms, </font></papertitle> <br>
+                      Step Size Optimization for LMS and NLMS Algorithms </font></papertitle> <br>
                     Kazunori Hayashi, <u>Kaede Shiohara</u>, Tetsuya Sasaki<br>
                     <em>APSIPA ASC, 2019. </em> <br>
                   </p>
@@ -93,11 +93,11 @@
             <td style="padding:20px;width:100%;vertical-align:middle">
                 <heading> <font size="6"> Invited Talk </font></heading>
                 <p>
-                  <papertitle>  <font size="4">In MIRU 2022</font></papertitle> <br>
+                  <papertitle>  <font size="4">In Meeting on Image Recognition and Understanding (MIRU) 2022</font></papertitle> <br>
                   Detecting Deepfakes with Self-Blended Images
                 </p>
                 <p>
-                  <papertitle> <font size="4"> In VC 2022 </font></papertitle> <br>
+                  <papertitle> <font size="4"> In Visual Computing (VC) 2022 </font></papertitle> <br>
                   Detecting Deepfakes with Self-Blended Images
                 </p>
             </td>
