--- a/index.html
+++ b/index.html
@@ -93,11 +93,11 @@
             <td style="padding:20px;width:100%;vertical-align:middle">
                 <heading> <font size="6"> Invited Talk </font></heading>
                 <p>
-                  <papertitle>  <font size="4">In Meeting on Image Recognition and Understanding (MIRU) 2022</font></papertitle> <br>
+                  <papertitle>  <font size="4">In <em>Meeting on Image Recognition and Understanding (MIRU) 2022</em></font></papertitle> <br>
                   Detecting Deepfakes with Self-Blended Images
                 </p>
                 <p>
-                  <papertitle> <font size="4"> In Visual Computing (VC) 2022 </font></papertitle> <br>
+                  <papertitle> <font size="4"> In <em>Visual Computing (VC) 2022 </em></font></papertitle> <br>
                   Detecting Deepfakes with Self-Blended Images
                 </p>
             </td>
