--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                     <papertitle> <font size="4"> Detecting Deepfakes with Self-Blended Images </font></papertitle> <br>
                     <u>Kaede Shiohara</u>,
                     <a href="https://www.hal.t.u-tokyo.ac.jp/~yamasaki/index-e.html">Toshihiko Yamasaki</a><br>
-                    <em>CVPR, Oral, 2022. </em> <br>
+                    <em>Computer Vision and Pattern Recognition (CVPR), Oral, 2022. </em> <br>
                     [<a href="https://arxiv.org/abs/2204.08376">Paper</a>]  
                     [<a href="https://github.com/mapooon/SelfBlendedImages">Code</a>] 
                   </p>
@@ -81,7 +81,7 @@
                     <papertitle> <font size="4"> Differentiable Programming based
                       Step Size Optimization for LMS and NLMS Algorithms </font></papertitle> <br>
                     Kazunori Hayashi, <u>Kaede Shiohara</u>, Tetsuya Sasaki<br>
-                    <em>APSIPA ASC, 2019. </em> <br>
+                    <em>Asia-Pacific Signal and Information Processing Association Annual Summit and Conference (APSIPA ASC), 2019. </em> <br>
                   </p>
               </td>
           </tr>
