--- a/index.html
+++ b/index.html
@@ -73,15 +73,17 @@
                     <papertitle> <font size="4"> Detecting Deepfakes with Self-Blended Images </font></papertitle> <br>
                     <u>Kaede Shiohara</u>,
                     <a href="https://www.hal.t.u-tokyo.ac.jp/~yamasaki/index-e.html">Toshihiko Yamasaki</a><br>
-                    <em>Computer Vision and Pattern Recognition (CVPR), Oral, 2022. </em> <br>
+                    In <em>Computer Vision and Pattern Recognition (CVPR), Oral, 2022. </em> <br>
                     [<a href="https://arxiv.org/abs/2204.08376">Paper</a>]  
                     [<a href="https://github.com/mapooon/SelfBlendedImages">Code</a>] 
+                    [<a href="https://www.u-tokyo.ac.jp/focus/en/press/z0508_00221.html">Release (ENG)</a>]
+                    [<a href="https://www.i.u-tokyo.ac.jp/news/press/2022/202204262039.shtml">Release (JPN)</a>]
                   </p>
                   <p>
                     <papertitle> <font size="4"> Differentiable Programming based
                       Step Size Optimization for LMS and NLMS Algorithms </font></papertitle> <br>
                     Kazunori Hayashi, <u>Kaede Shiohara</u>, Tetsuya Sasaki<br>
-                    <em>Asia-Pacific Signal and Information Processing Association Annual Summit and Conference (APSIPA ASC), 2019. </em> <br>
+                    In <em>Asia-Pacific Signal and Information Processing Association Annual Summit and Conference (APSIPA ASC), 2019. </em> <br>
                   </p>
               </td>
           </tr>
@@ -119,7 +121,7 @@
               </p>
               <p>
                 <papertitle> <font size="4"> ディープフェイク見破れ　東大開発で脚光　「合成の跡」の見つけ方 </font></papertitle> <br>
-                2022.7.6, 毎日新聞電子版, 2022.7.7 紙面版 <br>
+                2022.7.6 毎日新聞電子版, 2022.7.7 紙面版 <br>
                 [<a href="https://mainichi.jp/articles/20220704/k00/00m/040/113000c">Webpage</a>]
               </p>
           </td>
