--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
               </p>
               <p>
                 I am a PhD student at <a href="https://www.cvm.t.u-tokyo.ac.jp/" >Computer Vision and Media Lab</a>. <br>
-                I am working mainly on machine learning in/for media forensics. 
+                I am working mainly on machine learning in/for media forensics. <br>
+                <b>Currently, I'm looking for a chance for internship in 2023. If you are interested in me, please shoot an </b> <a href="mailto:shiohara@cvm.t.u-tokyo.ac.jp">email</a>.
               </p>
               <p style="text-align:center">
                 <a href="https://drive.google.com/file/d/1m2uh6MNIR4N2PP9QkVvKMjx08MfWe-Bm/view?usp=sharing">CV</a> &nbsp/&nbsp
@@ -64,6 +65,19 @@
                 </td>
             </tr>
         </tbody></table>
+
+        <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+          <tr>
+              <td style="padding:20px;width:100%;vertical-align:middle">
+                  <heading> <font size="6"> Experience </font></heading>
+                  <p>
+                    <strong> <font size="4"> CyberAgent AI Lab </font></strong><br>
+                    Computer Vision Research Intern<br> 
+                    <em>2022.8 - Present</em>
+                  </p>
+              </td>
+          </tr>
+      </tbody></table>
         
         <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
           <tr>
@@ -124,6 +138,12 @@
                 2022.7.6 毎日新聞電子版, 2022.7.7 紙面版 <br>
                 [<a href="https://mainichi.jp/articles/20220704/k00/00m/040/113000c">Webpage</a>]
               </p>
+              <p>
+                <papertitle> <font size="4"> 報道の日2022 </font></papertitle> <br>
+                2022.12.18 Tokyo Broadcasting System (TBS) Television <br>
+                [<a href="https://www.tbs.co.jp/houdounohi/">Webpage</a>]
+              </p>
+              
           </td>
       </tr>
   </tbody></table>
