--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
     <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
       <tr>
           <td style="padding:20px;width:100%;vertical-align:middle">
-              <heading> <font size="6"> Awards </font></heading>
+              <heading> <font size="6"> Award </font></heading>
               <p>
                 <papertitle>  <font size="4">Telecom System Technology Award 2022</em></font></papertitle> <br>
                 <!-- [<a href="">Webpage</a>] -->
