--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
               <heading> <font size="6"> Award </font></heading>
               <p>
                 <papertitle>  <font size="4">Telecom System Technology Award 2022</em></font></papertitle> <br>
-                <!-- [<a href="">Webpage</a>] -->
+                [<a href="https://www.taf.or.jp/files/2061/979456817.pdf">Webpage</a>]
               </p>
               <p>
                 <papertitle>  <font size="4">Hiroshi Harashima Academic Honorable Award 2022</em></font></papertitle> <br>
@@ -158,7 +158,8 @@
               </p>
               <p>
                 <papertitle> <font size="4"> フェイク動画を見つけ出す高性能AI </font></papertitle> <br>
-                子供の科学2022年7月号
+                子供の科学2022年7月号 <br>
+                [<a href="https://www.seibundo-shinkosha.net/magazine/kids/71745/">Webpage</a>]
               </p>
               <p>
                 <papertitle> <font size="4"> ディープフェイク見破れ　東大開発で脚光　「合成の跡」の見つけ方 </font></papertitle> <br>
