--- a/index.html
+++ b/index.html
@@ -84,18 +84,20 @@
               <td style="padding:20px;width:100%;vertical-align:middle">
                   <heading> <font size="6"> Publication </font></heading>
                   <p>
-                    <papertitle> <font size="4"> Detecting Deepfakes with Self-Blended Images </font></papertitle> <br>
-                    <u>Kaede Shiohara</u>, Toshihiko Yamasaki<br>
-                    In <em>Computer Vision and Pattern Recognition (CVPR), Oral, 2022. </em> <br>
-                    [<a href="https://arxiv.org/abs/2204.08376">Paper</a>]  
-                    [<a href="https://github.com/mapooon/SelfBlendedImages">Code</a>] 
-                    [Press Release <a href="https://www.u-tokyo.ac.jp/focus/en/press/z0508_00221.html"> (ENG)</a> / <a href="https://www.i.u-tokyo.ac.jp/news/press/2022/202204262039.shtml"> (JPN)</a>]
+                    <papertitle> <font size="4"> BlendFace: Re-designing Identity Encoders for Face-Swapping </font></papertitle> <br>
+                    <u>Kaede Shiohara</u>, Xingchao Yang, Takafumi Taketomi<br>
+                    <em>IEEE/CVF International Conference on Computer Vision (ICCV), 2023. </em> <br>
+                    [<a href="https://arxiv.org/abs/2307.10854">Paper</a>]  
+                    [<a href="https://github.com/mapooon/BlendFace">Code</a>]
+                    [<a href="https://mapooon.github.io/BlendFacePage">Webpage</a>] 
                   </p>
                   <p>
-                    <papertitle> <font size="4"> Differentiable Programming based
-                      Step Size Optimization for LMS and NLMS Algorithms </font></papertitle> <br>
-                    Kazunori Hayashi, <u>Kaede Shiohara</u>, Tetsuya Sasaki<br>
-                    In <em>Asia-Pacific Signal and Information Processing Association Annual Summit and Conference (APSIPA ASC), 2019. </em> <br>
+                    <papertitle> <font size="4"> Detecting Deepfakes with Self-Blended Images </font></papertitle> <br>
+                    <u>Kaede Shiohara</u>, Toshihiko Yamasaki<br>
+                    <em>IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR), Oral, 2022. </em> <br>
+                    [<a href="https://arxiv.org/abs/2204.08376">Paper</a>]  
+                    [<a href="https://github.com/mapooon/SelfBlendedImages">Code</a>] 
+                    [UToyko <a href="https://www.u-tokyo.ac.jp/focus/en/press/z0508_00221.html"> (ENG)</a> / <a href="https://www.i.u-tokyo.ac.jp/news/press/2022/202204262039.shtml"> (JPN)</a>]
                   </p>
               </td>
           </tr>
