--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                     <em>IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR), Oral, 2022. </em> <br>
                     [<a href="https://arxiv.org/abs/2204.08376">Paper</a>]  
                     [<a href="https://github.com/mapooon/SelfBlendedImages">Code</a>] 
-                    [UToyko <a href="https://www.u-tokyo.ac.jp/focus/en/press/z0508_00221.html"> (ENG)</a> / <a href="https://www.i.u-tokyo.ac.jp/news/press/2022/202204262039.shtml"> (JPN)</a>]
+                    [UTokyo <a href="https://www.u-tokyo.ac.jp/focus/en/press/z0508_00221.html"> (ENG)</a> / <a href="https://www.i.u-tokyo.ac.jp/news/press/2022/202204262039.shtml"> (JPN)</a>]
                   </p>
               </td>
           </tr>
