--- a/index.html
+++ b/index.html
@@ -100,12 +100,12 @@
 
       <tr>
         <td style="padding:20px;width:25%;vertical-align:middle">
-            <img width="280" height="100" align="center" src="./files/teaser/cvpr24_f2d.png">
+            <img width="219" height="100" align="center" src="./files/teaser/cvpr24_f2d.png">
         </td>
         <td style="width:75%;vertical-align:middle">
             <papertitle><font size="4"> Face2Diffusion for Fast and Editable Face Personalization </font></papertitle> <br>
-            <u>Kaede Shiohara</u>, Toshihiko Yamasaki<br>
-            <em>IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR), 2024. </em> <br>
+            <u><strong>Kaede Shiohara</strong></u>, Toshihiko Yamasaki<br>
+            <em>IEEE/CVF Conference on Computer Vision and Pattern Recognition (<strong>CVPR</strong>), 2024. </em> <br>
             [<a href="https://arxiv.org/abs/2403.05094">Paper</a>]
             [<a href="https://github.com/mapooon/Face2Diffusion">Code</a>]
             [<a href="https://mapooon.github.io/Face2DiffusionPage/">Webpage</a>]
@@ -118,12 +118,12 @@
         </td>
         <td style="width:75%;vertical-align:middle">
           <papertitle> <font size="4"> BlendFace: Re-designing Identity Encoders for Face-Swapping </font></papertitle> <br>
-          <u>Kaede Shiohara</u>, Xingchao Yang, Takafumi Taketomi<br>
-          <em>IEEE/CVF International Conference on Computer Vision (ICCV), 2023. </em> <br>
+          <u><strong>Kaede Shiohara</strong></u>, Xingchao Yang, Takafumi Taketomi<br>
+          <em>IEEE/CVF International Conference on Computer Vision (<strong>ICCV</strong>), 2023. </em> <br>
           [<a href="https://arxiv.org/abs/2307.10854">Paper</a>]  
           [<a href="https://github.com/mapooon/BlendFace">Code</a>]
           [<a href="https://mapooon.github.io/BlendFacePage">Webpage</a>] <br>
-          Work is done during an internship at CyberAgent AI Lab
+          Work done during an internship at CyberAgent AI Lab
         </td>
       </tr>
       
@@ -132,8 +132,8 @@
     </td>
     <td style="width:75%;vertical-align:middle">
       <papertitle> <font size="4"> Detecting Deepfakes with Self-Blended Images </font></papertitle> <br>
-                    <u>Kaede Shiohara</u>, Toshihiko Yamasaki<br>
-                    <em>IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR), Oral, 2022. </em> <br>
+                    <u><strong>Kaede Shiohara</strong></u>, Toshihiko Yamasaki<br>
+                    <em>IEEE/CVF Conference on Computer Vision and Pattern Recognition (<strong>CVPR</strong>), <strong>Oral</strong>, 2022. </em> <br>
                     [<a href="https://arxiv.org/abs/2204.08376">Paper</a>]  
                     [<a href="https://github.com/mapooon/SelfBlendedImages">Code</a>] 
                     [UTokyo <a href="https://www.u-tokyo.ac.jp/focus/en/press/z0508_00221.html"> (ENG)</a> / <a href="https://www.i.u-tokyo.ac.jp/news/press/2022/202204262039.shtml"> (JPN)</a>]
