--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
               </p>
               <p>
                 I am a PhD student at <a href="https://www.cvm.t.u-tokyo.ac.jp/" >Computer Vision and Media Lab</a>. <br>
-                I am working on deep generative models for human-centric content creation. <br>
+                I am mainly working on face recognition, generation, and forensics for human content creation. <br>
               </p>
               <p style="text-align:center">
                 <a href="https://drive.google.com/file/d/1Z8tqdgiz0pSpv2i-Eka_kcoh0ymqzUoo/view?usp=sharing">CV</a> &nbsp/&nbsp
@@ -103,7 +103,7 @@
                 <td style="padding:20px;width:100%;vertical-align:middle;text-align:left;">
                     <papertitle><font size="4"> PetFace: A Large-Scale Dataset and Benchmark for Animal Identification </font></papertitle> <br>
                     Risa Shinoda*, <u><strong>Kaede Shiohara</strong></u>* (*Equal contribution)<br>
-                    <em>European Conference on Computer Vision (<strong>ECCV</strong>), 2024. </em> <br>
+                    <em>European Conference on Computer Vision (<strong>ECCV</strong>), <strong>Oral</strong>, 2024. </em> <br>
                     [<a href="https://arxiv.org/abs/2407.13555">Paper</a>]
                     [<a href="https://github.com/mapooon/PetFace">Code</a>]
                     [<a href="https://dahlian00.github.io/PetFacePage/">Webpage</a>]<br><br>
