--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
               <p>
                 I am a PhD student at <a href="https://www.cvm.t.u-tokyo.ac.jp/" >Computer Vision and Media Lab</a>. <br>
                 I am mainly working on face recognition, generation, and forensics for human content creation. <br>
+                <font color="red">I am looking for a full-time research scientist position from April 2025.</font> Please contact me by <a href="mailto:shiohara@cvm.t.u-tokyo.ac.jp">e-mail</a> if you are interested.
               </p>
               <p style="text-align:center">
                 <a href="https://drive.google.com/file/d/1Z8tqdgiz0pSpv2i-Eka_kcoh0ymqzUoo/view?usp=sharing">CV</a> &nbsp/&nbsp
