--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                 <td style="padding:20px;width:100%;vertical-align:middle;text-align:left;">
                     <papertitle><font size="4"> PetFace: A Large-Scale Dataset and Benchmark for Animal Identification </font></papertitle> <br>
                     Risa Shinoda*, <u><strong>Kaede Shiohara</strong></u>* (*Equal contribution)<br>
-                    <em>European Conference on Computer Vision (<strong>ECCV</strong>), <strong>Oral</strong>, 2024. </em> <br>
+                    <em>European Conference on Computer Vision (<font color=#4169E1><strong>ECCV</strong></font>), <strong>Oral</strong>, 2024. </em> <br>
                     [<a href="https://arxiv.org/abs/2407.13555">Paper</a>]
                     [<a href="https://github.com/mapooon/PetFace">Code</a>]
                     [<a href="https://dahlian00.github.io/PetFacePage/">Webpage</a>]<br><br>
@@ -117,7 +117,7 @@
                 <td style="padding:20px;width:100%;vertical-align:middle;text-align:left;">
                     <papertitle><font size="4"> Face2Diffusion for Fast and Editable Face Personalization </font></papertitle> <br>
                     <u><strong>Kaede Shiohara</strong></u>, Toshihiko Yamasaki<br>
-                    <em>IEEE/CVF Conference on Computer Vision and Pattern Recognition (<strong>CVPR</strong>), 2024. </em> <br>
+                    <em>IEEE/CVF Conference on Computer Vision and Pattern Recognition (<font color=#4169E1><strong>CVPR</strong></font>), 2024. </em> <br>
                     [<a href="https://arxiv.org/abs/2403.05094">Paper</a>]
                     [<a href="https://github.com/mapooon/Face2Diffusion">Code</a>]
                     [<a href="https://mapooon.github.io/Face2DiffusionPage/">Webpage</a>]<br><br>
@@ -129,7 +129,7 @@
                 <td style="padding:20px;width:100%;vertical-align:middle;text-align:left;">
                     <papertitle><font size="4"> BlendFace: Re-designing Identity Encoders for Face-Swapping </font></papertitle> <br>
                     <u><strong>Kaede Shiohara</strong></u>, Xingchao Yang, Takafumi Taketomi<br>
-                    <em>IEEE/CVF International Conference on Computer Vision (<strong>ICCV</strong>), 2023. </em> <br>
+                    <em>IEEE/CVF International Conference on Computer Vision (<font color=#4169E1><strong>ICCV</strong></font>), 2023. </em> <br>
                     [<a href="https://arxiv.org/abs/2307.10854">Paper</a>]
                     [<a href="https://github.com/mapooon/BlendFace">Code</a>]
                     [<a href="https://mapooon.github.io/BlendFacePage">Webpage</a>] <br>
@@ -142,7 +142,7 @@
                 <td style="padding:20px;width:100%;vertical-align:middle;text-align:left;">
                     <papertitle><font size="4"> Detecting Deepfakes with Self-Blended Images </font></papertitle> <br>
                     <u><strong>Kaede Shiohara</strong></u>, Toshihiko Yamasaki<br>
-                    <em>IEEE/CVF Conference on Computer Vision and Pattern Recognition (<strong>CVPR</strong>), <strong>Oral</strong>, 2022. </em> <br>
+                    <em>IEEE/CVF Conference on Computer Vision and Pattern Recognition (<font color=#4169E1><strong>CVPR</strong></font>), <strong>Oral</strong>, 2022. </em> <br>
                     [<a href="https://arxiv.org/abs/2204.08376">Paper</a>]
                     [<a href="https://github.com/mapooon/SelfBlendedImages">Code</a>]
                     [UTokyo <a href="https://www.u-tokyo.ac.jp/focus/en/press/z0508_00221.html"> (ENG)</a> / <a href="https://www.i.u-tokyo.ac.jp/news/press/2022/202204262039.shtml"> (JPN)</a>]<br><br>
