--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div id="app">
         <header class="fixed-header">
             <div class="bio-container">
-                <div class="profile-section">
+                <div class="profile-section desktop-only">
                     <img src="./files/photo/profile.jpeg" alt="profile photo" class="profile-img">
                     <div class="bio-text">
                         <h1>{{ $t('name') }}</h1>
@@ -32,13 +32,14 @@
                 <div class="lang-switch">
                     <span 
                         @click="setLang('en')" 
-                        :class="{ active: currentLang === 'en' }">EN</span>
+                        :class="{ active: currentLang === 'en' }">[EN</span>
                     <span>/</span>
                     <span 
                         @click="setLang('ja')" 
-                        :class="{ active: currentLang === 'ja' }">JP</span>
+                        :class="{ active: currentLang === 'ja' }">JP]</span>
                 </div>
                 <nav class="main-nav">
+                    <router-link to="/" class="mobile-only">{{ $t('nav.home') }}</router-link>
                     <router-link to="/profile">{{ $t('nav.profile') }}</router-link>
                     <router-link to="/publications">{{ $t('nav.publications') }}</router-link>
                     <router-link to="/talks">{{ $t('nav.talks') }}</router-link>
