--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                         :class="{ active: currentLang === 'ja' }">JP]</span>
                 </div>
                 <nav class="main-nav">
-                    <router-link to="/" class="mobile-only">{{ $t('nav.home') }}</router-link>
+                    <router-link to="/home" class="mobile-only">{{ $t('nav.home') }}</router-link>
                     <router-link to="/profile">{{ $t('nav.profile') }}</router-link>
                     <router-link to="/publications">{{ $t('nav.publications') }}</router-link>
                     <router-link to="/talks">{{ $t('nav.talks') }}</router-link>
