--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <script src="https://cdn.jsdelivr.net/npm/vue-i18n@8.26.7/dist/vue-i18n.js"></script>
 </head>
 <body>
-    <div id="app">
+    <div id="app" v-cloak>
         <header class="fixed-header">
             <div class="bio-container">
                 <div class="profile-section desktop-only">
