--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
         </main>
     </div>
 
-    <script src="assets/js/i18n.js" defer></script>
-    <script src="assets/js/router.js" defer></script>
-    <script src="assets/js/app.js" defer></script>
+    <script src="assets/js/i18n.js"></script>
+    <script src="assets/js/router.js"></script>
+    <script src="assets/js/app.js"></script>
 </body>
 </html>
