--- a/index.html
+++ b/index.html
@@ -5,58 +5,135 @@
     <title>Kaede Shiohara</title>
     <meta name="author" content="Kaede Shiohara">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="assets/css/style.css">
+    <link rel="stylesheet" type="text/css" href="stylesheet.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <script src="https://cdn.jsdelivr.net/npm/vue@2.6.14/dist/vue.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/vue-router@3.5.3/dist/vue-router.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/vue-i18n@8.26.7/dist/vue-i18n.js"></script>
 </head>
 <body>
-    <div id="app" v-cloak>
-        <header class="fixed-header">
-            <div class="bio-container">
-                <div class="profile-section desktop-only">
-                    <img src="./files/photo/profile.jpeg" alt="profile photo" class="profile-img">
-                    <div class="bio-text">
-                        <h1>{{ $t('name') }}</h1>
-                        <p v-html="$t('bio')"></p>
-                        <p class="links">
-                            <a href="https://drive.google.com/file/d/1Z8tqdgiz0pSpv2i-Eka_kcoh0ymqzUoo/view?usp=sharing">CV</a> /
-                            <a href="mailto:shiohara@cvm.t.u-tokyo.ac.jp" title="Email"><i class="fas fa-envelope"></i></a> /
-                            <a href="https://scholar.google.co.jp/citations?user=NME5NOoAAAAJ&hl=ja&authuser=2&oi=ao" title="Google Scholar"><i class="fas fa-graduation-cap"></i></a> /
-                            <a href="https://twitter.com/kaedeshioharacs" title="Twitter"><i class="fab fa-twitter"></i></a> /
-                            <a href="https://github.com/mapooon" title="Github"><i class="fab fa-github"></i></a>
-                        </p>
+    <header class="fixed-header">
+        <div class="header-container">
+            <div class="logo">
+                <a href="index.html">Kaede Shiohara</a>
+            </div>
+            <nav class="main-nav">
+                <a href="index.html" class="active">About</a>
+                <a href="publications.html">Publications</a>
+                <a href="contact.html">Contact</a>
+            </nav>
+        </div>
+    </header>
+
+    <div class="container">
+        <div class="profile-section">
+            <img src="./files/photo/profile.jpeg" alt="profile photo" class="profile-img">
+            <div class="profile-info">
+                <h1>Kaede Shiohara</h1>
+                <p>I am a post doc at Computer Vision and Media Lab. I am mainly working on computer vision and pattern recognition, especially face generation and forgery detection.</p>
+                <div class="social-links">
+                    <a href="https://drive.google.com/file/d/1Z8tqdgiz0pSpv2i-Eka_kcoh0ymqzUoo/view?usp=sharing">CV</a>
+                    <a href="mailto:shiohara@cvm.t.u-tokyo.ac.jp" title="Email"><i class="fas fa-envelope"></i></a>
+                    <a href="https://scholar.google.co.jp/citations?user=NME5NOoAAAAJ&hl=ja&authuser=2&oi=ao" title="Google Scholar"><i class="fas fa-graduation-cap"></i></a>
+                    <a href="https://twitter.com/kaedeshioharacs" title="Twitter"><i class="fab fa-twitter"></i></a>
+                    <a href="https://github.com/mapooon" title="Github"><i class="fab fa-github"></i></a>
+                </div>
+            </div>
+        </div>
+
+        <section class="education-section">
+            <h2>Education</h2>
+            <div class="education-item">
+                <h3>Ph.D. at the University of Tokyo</h3>
+                <p>Graduate School of Information Science and Technology<br>
+                Department of Information and Communication Engineering<br>
+                Supervisor: <a href="https://www.cvm.t.u-tokyo.ac.jp/en/">Prof. Toshihiko Yamasaki</a><br>
+                <em>2022.4 - 2025.3</em></p>
+            </div>
+            <div class="education-item">
+                <h3>M.S. at the University of Tokyo</h3>
+                <p>Graduate School of Information Science and Technology<br>
+                Department of Information and Communication Engineering<br>
+                Supervisor: <a href="https://www.cvm.t.u-tokyo.ac.jp/en/">Prof. Toshihiko Yamasaki</a><br>
+                <em>2020.4 - 2022.3</em></p>
+            </div>
+            <div class="education-item">
+                <h3>B.S. at Osaka City University</h3>
+                <p>Under Graduate School of Engineering<br>
+                Department of Electrical and Information Engineering<br>
+                Supervisor: <a href="https://ds.k.kyoto-u.ac.jp/introduction/member/hayashi/">Prof. Kazunori Hayashi</a><br>
+                <em>2015.4 - 2019.3</em></p>
+            </div>
+        </section>
+
+        <section class="selected-publications">
+            <h2>Selected Publications</h2>
+            <div class="publication-item">
+                <img src="./files/teaser/eccv24_pf.jpg" alt="PetFace" class="publication-thumbnail">
+                <div class="publication-info">
+                    <h3>PetFace: A Large-Scale Dataset and Benchmark for Animal Identification</h3>
+                    <p>Risa Shinoda*, <strong>Kaede Shiohara*</strong> (*Equal contribution)</p>
+                    <p>European Conference on Computer Vision (ECCV) 2024 (Oral, Strong Accept x3)</p>
+                    <div class="publication-links">
+                        [<a href="https://arxiv.org/abs/2407.13555">paper</a>]
+                        [<a href="https://github.com/mapooon/PetFace">code</a>]
+                        [<a href="https://dahlian00.github.io/PetFacePage/">project</a>]
                     </div>
                 </div>
-                <div class="lang-switch">
-                    <span 
-                        @click="setLang('en')" 
-                        :class="{ active: currentLang === 'en' }">[EN</span>
-                    <span>/</span>
-                    <span 
-                        @click="setLang('ja')" 
-                        :class="{ active: currentLang === 'ja' }">JP]</span>
-                </div>
-                <nav class="main-nav">
-                    <router-link to="/home" class="mobile-only">{{ $t('nav.home') }}</router-link>
-                    <router-link to="/profile">{{ $t('nav.profile') }}</router-link>
-                    <router-link to="/publications">{{ $t('nav.publications') }}</router-link>
-                    <router-link to="/talks">{{ $t('nav.talks') }}</router-link>
-                    <router-link to="/awards">{{ $t('nav.awards') }}</router-link>
-                    <router-link to="/media">{{ $t('nav.media') }}</router-link>
-                    <router-link to="/other">{{ $t('nav.other') }}</router-link>
-                </nav>
             </div>
-        </header>
-
-        <main class="content">
-            <router-view></router-view>
-        </main>
+            <div class="publication-item">
+                <img src="./files/teaser/cvpr24_f2d.jpg" alt="Face2Diffusion" class="publication-thumbnail">
+                <div class="publication-info">
+                    <h3>Face2Diffusion for Fast and Editable Face Personalization</h3>
+                    <p><strong>Kaede Shiohara</strong>, Toshihiko Yamasaki</p>
+                    <p>IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR) 2024</p>
+                    <div class="publication-links">
+                        [<a href="https://arxiv.org/abs/2403.05094">paper</a>]
+                        [<a href="https://github.com/mapooon/Face2Diffusion">code</a>]
+                        [<a href="https://mapooon.github.io/Face2DiffusionPage/">project</a>]
+                    </div>
+                </div>
+            </div>
+            <div class="publication-item">
+                <img src="./files/teaser/iccv23_bf.jpg" alt="BlendFace" class="publication-thumbnail">
+                <div class="publication-info">
+                    <h3>BlendFace: Re-designing Identity Encoders for Face-Swapping</h3>
+                    <p><strong>Kaede Shiohara</strong>, Xingchao Yang, Takafumi Taketomi</p>
+                    <p>IEEE/CVF International Conference on Computer Vision (ICCV) 2023</p>
+                    <div class="publication-links">
+                        [<a href="https://arxiv.org/abs/2307.10854">paper</a>]
+                        [<a href="https://github.com/mapooon/BlendFace">code</a>]
+                        [<a href="https://mapooon.github.io/BlendFacePage">project</a>]
+                    </div>
+                </div>
+            </div>
+            <div class="publication-item">
+                <img src="./files/teaser/cvpr22_sbi.jpg" alt="Self-Blended Images" class="publication-thumbnail">
+                <div class="publication-info">
+                    <h3>Detecting Deepfakes with Self-Blended Images</h3>
+                    <p><strong>Kaede Shiohara</strong>, Toshihiko Yamasaki</p>
+                    <p>IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR) 2022 (Oral)</p>
+                    <div class="publication-links">
+                        [<a href="https://arxiv.org/abs/2204.08376">paper</a>]
+                        [<a href="https://github.com/mapooon/SelfBlendedImages">code</a>]
+                    </div>
+                </div>
+            </div>
+        </section>
     </div>
 
-    <script src="assets/js/i18n.js"></script>
-    <script src="assets/js/router.js"></script>
-    <script src="assets/js/app.js"></script>
+    <script>
+        // Add active class to current page in navigation
+        document.addEventListener('DOMContentLoaded', function() {
+            const currentLocation = window.location.pathname;
+            const navLinks = document.querySelectorAll('.main-nav a');
+            
+            navLinks.forEach(link => {
+                const linkPath = link.getAttribute('href');
+                if (currentLocation.endsWith(linkPath)) {
+                    link.classList.add('active');
+                } else if (currentLocation.endsWith('/') && linkPath === 'index.html') {
+                    link.classList.add('active');
+                }
+            });
+        });
+    </script>
 </body>
 </html>
