--- a/publications.html
+++ b/publications.html
@@ -17,6 +17,7 @@
             <nav class="main-nav">
                 <a href="index.html">About</a>
                 <a href="publications.html" class="active">Publications</a>
+                <a href="applications.html">Applications</a>
                 <a href="contact.html">Contact</a>
             </nav>
         </div>
@@ -110,26 +111,35 @@
 
         <section class="publications-section">
             <h2>Media</h2>
-            <div class="publication-item">
-                <h3>newsランナー</h3>
-                <p>2023.7.26 TV Kansai</p>
-                <div class="publication-links">
-                    [<a href="https://www.ktv.jp/runner/">Webpage</a>]
+            <div class="media-item">
+                <div>
+                    <h3>newsランナー</h3>
+                    <p>2023.7.26 TV Kansai</p>
+                    <div class="publication-links">
+                        [<a href="https://www.ktv.jp/runner/">Webpage</a>]
+                    </div>
                 </div>
+                <img src="./files/coverage/newsrunner.jpg" alt="newsランナー">
             </div>
-            <div class="publication-item">
-                <h3>フジテレビ日曜報道 THE PRIME</h3>
-                <p>2023.6.4 TV Fuji</p>
-                <div class="publication-links">
-                    [<a href="https://www.fujitv.co.jp/b_hp/nichiyouhoudou_theprime/">Webpage</a>]
+            <div class="media-item">
+                <div>
+                    <h3>フジテレビ日曜報道 THE PRIME</h3>
+                    <p>2023.6.4 TV Fuji</p>
+                    <div class="publication-links">
+                        [<a href="https://www.fujitv.co.jp/b_hp/nichiyouhoudou_theprime/">Webpage</a>]
+                    </div>
                 </div>
+                <img src="./files/coverage/sunday.jpg" alt="THE PRIME">
             </div>
-            <div class="publication-item">
-                <h3>60秒で学べるNews: AIが生むフェイク</h3>
-                <p>2023.1.25 TV Tokyo</p>
-                <div class="publication-links">
-                    [<a href="https://www.tv-tokyo.co.jp/60sec_news/backnumber/20230125/">Webpage</a>]
+            <div class="media-item">
+                <div>
+                    <h3>60秒で学べるNews: AIが生むフェイク</h3>
+                    <p>2023.1.25 TV Tokyo</p>
+                    <div class="publication-links">
+                        [<a href="https://www.tv-tokyo.co.jp/60sec_news/backnumber/20230125/">Webpage</a>]
+                    </div>
                 </div>
+                <img src="./files/coverage/60news.jpg" alt="60秒で学べるNews">
             </div>
             <div class="publication-item">
                 <h3>報道の日2022</h3>
