--- a/contact.html
+++ b/contact.html
@@ -17,6 +17,7 @@
             <nav class="main-nav">
                 <a href="index.html">About</a>
                 <a href="publications.html">Publications</a>
+                <a href="applications.html">Applications</a>
                 <a href="contact.html" class="active">Contact</a>
             </nav>
         </div>
