--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <nav class="main-nav">
                 <a href="index.html" class="active">About</a>
                 <a href="publications.html">Publications</a>
+                <a href="applications.html">Applications</a>
                 <a href="contact.html">Contact</a>
             </nav>
         </div>
