--- a/publications.html
+++ b/publications.html
@@ -41,7 +41,9 @@
                         [<a href="https://www.ktv.jp/runner/">Webpage</a>]
                     </div>
                 </div>
-                <img src="./files/coverage/newsrunner.jpg" alt="newsランナー">
+                <a href="./files/coverage/newsrunner.jpg" target="_blank">
+                    <img src="./files/coverage/newsrunner.jpg" alt="newsランナー">
+                </a>
             </div>
             <div class="media-item">
                 <div>
@@ -51,7 +53,9 @@
                         [<a href="https://www.fujitv.co.jp/b_hp/nichiyouhoudou_theprime/">Webpage</a>]
                     </div>
                 </div>
-                <img src="./files/coverage/sunday.jpg" alt="THE PRIME">
+                <a href="./files/coverage/sunday.jpg" target="_blank">
+                    <img src="./files/coverage/sunday.jpg" alt="THE PRIME">
+                </a>
             </div>
             <div class="media-item">
                 <div>
@@ -61,7 +65,9 @@
                         [<a href="https://www.tv-tokyo.co.jp/60sec_news/backnumber/20230125/">Webpage</a>]
                     </div>
                 </div>
-                <img src="./files/coverage/60news.jpg" alt="60秒で学べるNews">
+                <a href="./files/coverage/60news.jpg" target="_blank">
+                    <img src="./files/coverage/60news.jpg" alt="60秒で学べるNews">
+                </a>
             </div>
             <div class="publication-item">
                 <h3>報道の日2022</h3>
