--- a/applications.html
+++ b/applications.html
@@ -25,7 +25,7 @@
 
     <div class="container">
         <section class="publications-section">
-            <h2>Face Generation AI</h2>
+            <h2>Face Generation/Recognition AI</h2>
             <div class="publication-item">
                 <h3>FaceSwap</h3>
                 <video controls width="100%">
@@ -44,6 +44,13 @@
                 <h3>Audio -> Face</h3>
                 <video controls width="100%">
                     <source src="./files/application_videos/audio2face.mp4" type="video/mp4">
+                    Your browser does not support the video tag.
+                </video>
+            </div>
+            <div class="publication-item">
+                <h3>Facial Video -> Real or Fake</h3>
+                <video controls width="100%">
+                    <source src="./files/application_videos/deepfakedetection.mp4" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
             </div>
