--- a/applications.html
+++ b/applications.html
@@ -25,13 +25,16 @@
 
     <div class="container">
         <section class="publications-section">
-            <h2>Face Generation/Recognition AI</h2>
+            <h2>Facial AI</h2>
             <div class="publication-item">
                 <h3>FaceSwap</h3>
                 <video controls width="100%">
                     <source src="./files/application_videos/faceswap.mp4" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
+                <div class="publication-links">
+                    [<a href="https://openaccess.thecvf.com/content/ICCV2023/papers/Shiohara_BlendFace_Re-designing_Identity_Encoders_for_Face-Swapping_ICCV_2023_paper.pdf">Related Publication</a>]
+                </div>
             </div>
             <div class="publication-item">
                 <h3>Text + Face -> Image</h3>
@@ -39,6 +42,9 @@
                     <source src="./files/application_videos/text+face2image.mp4" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
+                <div class="publication-links">
+                    [<a href="https://openaccess.thecvf.com/content/CVPR2024/papers/Shiohara_Face2Diffusion_for_Fast_and_Editable_Face_Personalization_CVPR_2024_paper.pdf">Related Publication</a>]
+                </div>
             </div>
             <div class="publication-item">
                 <h3>Audio -> Face</h3>
@@ -53,6 +59,9 @@
                     <source src="./files/application_videos/deepfakedetection.mp4" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
+                <div class="publication-links">
+                    [<a href="https://openaccess.thecvf.com/content/CVPR2022/papers/Shiohara_Detecting_Deepfakes_With_Self-Blended_Images_CVPR_2022_paper.pdf">Related Publication</a>]
+                </div>
             </div>
         </section>
 
