--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 <div class="publication-info">
                     <h3>PetFace: A Large-Scale Dataset and Benchmark for Animal Identification</h3>
                     <p>Risa Shinoda*, <strong>Kaede Shiohara*</strong> (*Equal contribution)</p>
-                    <p>European Conference on Computer Vision (ECCV) 2024 (Oral, Strong Accept x3)</p>
+                    <p>European Conference on Computer Vision (<font color="salmon">ECCV</font>) 2024 (<font color="salmon">Oral</font>, <font color="salmon">Strong Accept x3</font>)</p>
                     <div class="publication-links">
                         [<a href="https://arxiv.org/abs/2407.13555">paper</a>]
                         [<a href="https://github.com/mapooon/PetFace">code</a>]
@@ -84,7 +84,7 @@
                 <div class="publication-info">
                     <h3>Face2Diffusion for Fast and Editable Face Personalization</h3>
                     <p><strong>Kaede Shiohara</strong>, Toshihiko Yamasaki</p>
-                    <p>IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR) 2024</p>
+                    <p>IEEE/CVF Conference on Computer Vision and Pattern Recognition (<font color="salmon">CVPR</font>) 2024</p>
                     <div class="publication-links">
                         [<a href="https://arxiv.org/abs/2403.05094">paper</a>]
                         [<a href="https://github.com/mapooon/Face2Diffusion">code</a>]
@@ -97,7 +97,7 @@
                 <div class="publication-info">
                     <h3>BlendFace: Re-designing Identity Encoders for Face-Swapping</h3>
                     <p><strong>Kaede Shiohara</strong>, Xingchao Yang, Takafumi Taketomi</p>
-                    <p>IEEE/CVF International Conference on Computer Vision (ICCV) 2023</p>
+                    <p>IEEE/CVF International Conference on Computer Vision (<font color="salmon">ICCV</font>) 2023</p>
                     <div class="publication-links">
                         [<a href="https://arxiv.org/abs/2307.10854">paper</a>]
                         [<a href="https://github.com/mapooon/BlendFace">code</a>]
@@ -110,7 +110,7 @@
                 <div class="publication-info">
                     <h3>Detecting Deepfakes with Self-Blended Images</h3>
                     <p><strong>Kaede Shiohara</strong>, Toshihiko Yamasaki</p>
-                    <p>IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR) 2022 (Oral)</p>
+                    <p>IEEE/CVF Conference on Computer Vision and Pattern Recognition (<font color="salmon">CVPR</font>) 2022 (<font color="salmon">Oral</font>)</p>
                     <div class="publication-links">
                         [<a href="https://arxiv.org/abs/2204.08376">paper</a>]
                         [<a href="https://github.com/mapooon/SelfBlendedImages">code</a>]
